fix: Flickering (#5326)
* fix: Flickering

Flickering while page loading, when preventFrameAttacks=false

issue: TOBAGO-2337

--- a/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/tobago.css
+++ b/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/tobago.css
@@ -725,6 +725,12 @@ li.tobago-menu-markup-selected {
   display: none;
 }
 
+/* Switches display off, while loading to avoid flickering.
+remove this class from DOM with JavaScript after the init process */
+.tobago-page-initializing {
+  display: none;
+}
+
 /* panel -------------------------------------------------------------- */
 
 .tobago-panel {
